kubernetes/apps/apps/openwebui/openwebui/app/service.yaml
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: openwebui-service
# spec:
#   type: ExternalName
#   externalName: wireguard.network.svc.cluster.local
#   ports:
#     - name: https
#       targetPort: 443
#       port: 443
---
kind: Service
apiVersion: v1
metadata:
  name: &name open-webui
  labels:
    service-type: ingress
  annotations:
    service.cilium.io/global: "true"
    service.cilium.io/affinity: "remote"
    # service.cilium.io/shared: "true"
    # io.cilium/global-service: "true"
    # service.cilium.io/global-sync-endpoint-slices: "true"
spec:
  type: LoadBalancer
  selector:
    app: ai-stack
  ports:
    - port: 8080
      name: *name
