kubernetes/apps/apps/openwebui/openwebui/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app openwebui
  labels:
    # app.kubernetes.io/name: *app
    # app.kubernetes.io/instance: *app
    kubernetes.io/ingress.class: traefik
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "10G"
    nginx.ingress.kubernetes.io/client-max-buffer-size: "10G"
    traefik.ingress.kubernetes.io/router.middlewares: network-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik-external
  rules:
    - host: &host openwebui.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwebui-service
                port:
                  number: 443
    - host: &host openwebui.cloud.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwebui-service
                port:
                  number: 443
  tls:
  - hosts:
      - openwebui.icylair.com
      - openwebui.cloud.icylair.com
    secretName: icylair-com-all-prod
